--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,9 @@
 </head>
 
 <body>
-    <app-productreactive-component></app-productreactive-component>
+    <app-customers></app-customers>
+    <br>
+    <app-orders></app-orders>
 </body>
 
 </html>
